--- a/index.html
+++ b/index.html
@@ -185,14 +185,14 @@
             <li>
                 <b><font color=#4682B4>[ICNP 2023]</font></b> <b><a href="https://ieeexplore.ieee.org/abstract/document/10355582" target="_blank">Towards Fine-grained and Practical Flow Control for Datacenter Networks</a></b>
                 <br><b>Wenxue Li</b>, Chaoliang Zeng, Jinbin Hu, Kai Chen
-                <br>[<a href="camera_ready/flowsail-icnp23.pdf" target="_blank">Paper</a>] [<a href="slides/flowsail-icnp2023-slides.pdf" target="_blank">Slides</a>]
+                <br>[<a href="https://ieeexplore.ieee.org/abstract/document/10355582" target="_blank">Paper</a>] [<a href="slides/flowsail-icnp2023-slides.pdf" target="_blank">Slides</a>]
             </li>
 
             <li>
                 <b><font color=#4682B4>[NSDI 2023]</font></b> <b><a href="https://www.usenix.org/conference/nsdi23/presentation/wang-zilong" target="_blank">SRNIC: A Scalable Architecture for RDMA NICs</a></b>
                 <br>Zilong Wang, Layong Luo, Qingsong Ning, Chaoliang Zeng, <b>Wenxue Li</b>, Xinchen Wan, Peng Xie, Tao Feng, Ke Cheng, Xiongfei Geng, Tianhao Wang, Weicheng Ling, Kejia Huo, Pingbo An, Kui Ji, Shideng Zhang, Bin Xu, Ruiqing Feng, Tao Ding, Kai Chen, Chuanxiong Guo
                 <!-- <br><b><font color=#DC143C>Best Paper Award</font></b> -->
-                <br>[<a href="camera_ready/nsdi23-wang-zilong.pdf" target="_blank">Paper</a>]
+                <br>[<a href="https://www.usenix.org/system/files/nsdi23-wang-zilong.pdf" target="_blank">Paper</a>]
             </li>
             
             <li>
