update pdf for aquarius

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <b><font color=#4682B4>[APNet 2023]</font></b> <b><a href="https://dl.acm.org/doi/10.1145/3600061.3600066" target="_blank">Scaling Switch-driven Flow Control with Aquarius</a></b>
                 <br><b>Wenxue Li</b>, Chaoliang Zeng, Jinbin Hu, Kai Chen
                 <!-- <br><b><font color=#DC143C>Best Paper Award</font></b> -->
-                <br>[<a href="https://dl.acm.org/doi/10.1145/3600061.3600066" target="_blank">Paper</a>]
+                <br>[<a href="https://dl.acm.org/doi/pdf/10.1145/3600061.3600066" target="_blank">Paper</a>]
             </li>
         </ol>
         <hr class="new">
