Add cepheus paper and slides

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <b><font color=#4682B4>[HPCA 2024]</font></b> <b><a href="" target="_blank">Cepheus: Accelerating Datacenter Applications with High-Performance RoCE-Capable Multicast</a></b>
                 <br><b>Wenxue Li*</b>, Junyi Zhang*, Yufei Liu, Gaoxiong Zeng, Zilong Wang, Chaoliang Zeng, Pengpeng Zhou, Qiaoling Wang, Kai Chen 
                 <!-- <br>in <i>The 30th IEEE International Symposium on High-Performance Computer Architecture</i>, 2024. -->
-                <br>[<a href="" target="_blank">Paper</a>] [<a href="" target="_blank">Slides</a>]                
+                <br>[<a href="https://ieeexplore.ieee.org/abstract/document/10476407/" target="_blank">Paper</a>] [<a href="slides/cepheus-hpca2024-slides.pdf" target="_blank">Slides</a>]                
             </li>                      
 
             <li>
