--- a/index.html
+++ b/index.html
@@ -215,13 +215,27 @@
         <hr class="new">
     </div> 
 
-    <!-- <div class="content honors" name='honors'>
+    <div class="content honors" name='honors'>
         <a name="honors"></a>
-        <div class="title">Honors and Awards</div>
+        <div class="title">Honors</div>
         <ul>
+            <li>HPCA 2024 Travel Grants (2024) </li>
+            <li>HKUST Postgraduate Studentship (2021-2025)</li>
+            <li>First-class Scholarship, ZJU (2019)</li>
+            <li>Zhejiang Daily - Alibaba New Media Scholarship, ZJU (2019)</li>
+            <li>Outstanding Student Leader, ZJU (2018)</li>
         </ul>
         <hr class="new">
-    </div> -->
+    </div>
+
+    <div class="content link" name='Links'>
+        <div class="title">Services</div>
+        <ul>
+            <li> ACM Transactions on Privacy and Security (TOPS), Reviewer, 2024
+            </li>            
+        </ul>
+        <hr class="new">
+    </div>
 
     <div class="content link" name='Links'>
         <div class="title">Teaching Assistant</div>
@@ -236,7 +250,7 @@
     </div> 
 
     <div class="content footer">
-        Last updated on <b><font color=#008B8B>Jan, 2024</font></b>.
+        Last updated on <b><font color=#008B8B>April, 2024</font></b>.
     </div>
 </body>
 </html>
