change email to figure

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <p>PhD Candidate</p>
                 <a href="https://cse.hkust.edu.hk/" target="_blank">Department of Computer Science and Engineering</a></br>
                 <a href="https://hkust.edu.hk/" target="_blank">The Hong Kong University of Science and Technology</a></br>
-                <p>Email: wlicv@connect.ust.hk</p>
+                <p>Email:<a><img src="images/email.jpg" alt="" width="250px" style="vertical-align:top" /></a></p>
                 <a href="https://scholar.google.com/citations?hl=en&user=boRtFioAAAAJ"><img src="images/googlescholar.png" alt="google scholar" width="28px" style="vertical-align:middle" /></a>
                 <a href="https://www.linkedin.com/in/wenxueli-7487741b6/"><img src="images/linkedin.png" alt="google scholar" width="28px" style="vertical-align:middle" /></a>
                 <a href="https://github.com/leewxgit"><img src="images/github.png" alt="google scholar" width="30px" style="vertical-align:middle" /></a>
