--- a/index.html
+++ b/index.html
@@ -176,6 +176,12 @@
         <div class="title">Publications</div>
         <ol> 
             <li>
+                <b><font color=#4682B4>[APNet 2024]</font></b> <b><a href="" target="_blank">Understanding Communication Characteristics of Distributed Training</a></b>
+                <br><b>Wenxue Li</b>, Xiangzhou Liu, Yuxuan Li, Yilun Jin, Han Tian, Zhizhen Zhong, Guyue Liu, Ying Zhang, Kai Chen
+                <!-- <br>[<a href=" target="_blank">Paper</a>] [<a href="" target="_blank">Slides</a>]                 -->
+            </li>
+
+            <li>
                 <b><font color=#4682B4>[HPCA 2024]</font></b> <b><a href="" target="_blank">Cepheus: Accelerating Datacenter Applications with High-Performance RoCE-Capable Multicast</a></b>
                 <br><b>Wenxue Li*</b>, Junyi Zhang*, Yufei Liu, Gaoxiong Zeng, Zilong Wang, Chaoliang Zeng, Pengpeng Zhou, Qiaoling Wang, Kai Chen 
                 <!-- <br>in <i>The 30th IEEE International Symposium on High-Performance Computer Architecture</i>, 2024. -->
