add understanding paper

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <li>
                 <b><font color=#4682B4>[APNet 2024]</font></b> <b><a href="" target="_blank">Understanding Communication Characteristics of Distributed Training</a></b>
                 <br><b>Wenxue Li</b>, Xiangzhou Liu, Yuxuan Li, Yilun Jin, Han Tian, Zhizhen Zhong, Guyue Liu, Ying Zhang, Kai Chen
-                <!-- <br>[<a href=" target="_blank">Paper</a>] [<a href="" target="_blank">Slides</a>]                 -->
+                <br>[<a href="camera_ready/understanding.pdf" target="_blank">Paper</a>]                
             </li>
 
             <li>
