--- a/index.html
+++ b/index.html
@@ -176,36 +176,41 @@
         <div class="title">Publications</div>
         <ol> 
             <li>
+                <b><font color=#4682B4>[ToN 2024]</font></b> <b><a href="" target="_blank">FlowSail: Fine-grained and Practical Flow Control for Datacenter Networks</a></b>
+                <br><b>Wenxue Li</b>, Chaoliang Zeng, Jinbin Hu, Kai Chen
+                <br>[<a href="https://ieeexplore.ieee.org/document/10541943" target="_blank">Link</a>]                
+            </li>
+            <li>
                 <b><font color=#4682B4>[APNet 2024]</font></b> <b><a href="" target="_blank">Understanding Communication Characteristics of Distributed Training</a></b>
                 <br><b>Wenxue Li</b>, Xiangzhou Liu, Yuxuan Li, Yilun Jin, Han Tian, Zhizhen Zhong, Guyue Liu, Ying Zhang, Kai Chen
-                <br>[<a href="camera_ready/understanding.pdf" target="_blank">Paper</a>]                
+                <br>[<a href="https://dl.acm.org/doi/10.1145/3663408.3663409" target="_blank">Link</a>]                
             </li>
 
             <li>
                 <b><font color=#4682B4>[HPCA 2024]</font></b> <b><a href="" target="_blank">Cepheus: Accelerating Datacenter Applications with High-Performance RoCE-Capable Multicast</a></b>
                 <br><b>Wenxue Li*</b>, Junyi Zhang*, Yufei Liu, Gaoxiong Zeng, Zilong Wang, Chaoliang Zeng, Pengpeng Zhou, Qiaoling Wang, Kai Chen 
                 <!-- <br>in <i>The 30th IEEE International Symposium on High-Performance Computer Architecture</i>, 2024. -->
-                <br>[<a href="https://ieeexplore.ieee.org/abstract/document/10476407/" target="_blank">Paper</a>] [<a href="slides/cepheus-hpca2024-slides.pdf" target="_blank">Slides</a>]                
+                <br>[<a href="https://ieeexplore.ieee.org/abstract/document/10476407/" target="_blank">Link</a>] [<a href="slides/cepheus-hpca2024-slides.pdf" target="_blank">Slides</a>]                
             </li>                      
 
             <li>
                 <b><font color=#4682B4>[ICNP 2023]</font></b> <b><a href="https://ieeexplore.ieee.org/abstract/document/10355582" target="_blank">Towards Fine-grained and Practical Flow Control for Datacenter Networks</a></b>
                 <br><b>Wenxue Li</b>, Chaoliang Zeng, Jinbin Hu, Kai Chen
-                <br>[<a href="https://ieeexplore.ieee.org/abstract/document/10355582" target="_blank">Paper</a>] [<a href="slides/flowsail-icnp2023-slides.pdf" target="_blank">Slides</a>]
+                <br>[<a href="https://ieeexplore.ieee.org/abstract/document/10355582" target="_blank">Link</a>] [<a href="slides/flowsail-icnp2023-slides.pdf" target="_blank">Slides</a>]
             </li>
 
             <li>
                 <b><font color=#4682B4>[NSDI 2023]</font></b> <b><a href="https://www.usenix.org/conference/nsdi23/presentation/wang-zilong" target="_blank">SRNIC: A Scalable Architecture for RDMA NICs</a></b>
                 <br>Zilong Wang, Layong Luo, Qingsong Ning, Chaoliang Zeng, <b>Wenxue Li</b>, Xinchen Wan, Peng Xie, Tao Feng, Ke Cheng, Xiongfei Geng, Tianhao Wang, Weicheng Ling, Kejia Huo, Pingbo An, Kui Ji, Shideng Zhang, Bin Xu, Ruiqing Feng, Tao Ding, Kai Chen, Chuanxiong Guo
                 <!-- <br><b><font color=#DC143C>Best Paper Award</font></b> -->
-                <br>[<a href="https://www.usenix.org/system/files/nsdi23-wang-zilong.pdf" target="_blank">Paper</a>]
+                <br>[<a href="https://www.usenix.org/system/files/nsdi23-wang-zilong.pdf" target="_blank">Link</a>]
             </li>
             
             <li>
                 <b><font color=#4682B4>[APNet 2023]</font></b> <b><a href="https://dl.acm.org/doi/10.1145/3600061.3600066" target="_blank">Scaling Switch-driven Flow Control with Aquarius</a></b>
                 <br><b>Wenxue Li</b>, Chaoliang Zeng, Jinbin Hu, Kai Chen
                 <!-- <br><b><font color=#DC143C>Best Paper Award</font></b> -->
-                <br>[<a href="https://dl.acm.org/doi/pdf/10.1145/3600061.3600066" target="_blank">Paper</a>]
+                <br>[<a href="https://dl.acm.org/doi/pdf/10.1145/3600061.3600066" target="_blank">Link</a>]
             </li>
         </ol>
         <hr class="new">
@@ -216,6 +221,7 @@
         <a name="honors"></a>
         <div class="title">Experiences</div>
         <ul>
+            <li>Research Intern @ Huawei Hong Kong Research Center (June 2024 - Present)</li>
             <li>Software Engineer Intern @ ByteDance (July 2020 - June 2021)</li>
         </ul>
         <hr class="new">
@@ -226,6 +232,7 @@
         <div class="title">Honors</div>
         <ul>
             <li>HPCA 2024 Travel Grants (2024) </li>
+            <li>HKUST Research Travel Grants (2023 Fall, 2024 Winter) </li>
             <li>HKUST Postgraduate Studentship (2021-2025)</li>
             <li>First-class Scholarship, ZJU (2019)</li>
             <li>Zhejiang Daily - Alibaba New Media Scholarship, ZJU (2019)</li>
