--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@ Hong Kong SAR, China
   </ul>
   <a href="#" id="toggle-news" onclick="toggleNews()">More</a>
 
+  <h2>Experiences</h2>
+  <ul>
+    <li><p>Research Intern @ Huawei Hong Kong Research Center, Hong Kong SAR, China (June 2024 - Present) </p></li>
+    <li><p>Software Engineer Intern @ ByteDance, Hangzhou, China (July 2020 - June 2021) </p></li>
+  </ul>
+
   <h2>Honors</h2>
   <ul>
     <li><p>HPCA 2024 Travel Grants (2024) </p></li>
