--- a/pub.html
+++ b/pub.html
@@ -101,7 +101,7 @@ APNet 2025<br/>
 APNet 2024<br/>
 </p></li>
 <li><p>
-<b style="color: #2081be;">Scaling Switch-driven Flow Control with Aquarius</b> [<a href="pdf/aquarius-apnet23.pdf" target="_blank">PDF</a>]<br/>
+<b style="color: #2081be;">Scaling Switch-driven Flow Control with Aquarius</b> [<a href="pdf/aquarius-apnet23.pdf" target="_blank">PDF</a>] [<a href="slides/aquarius-apnet23-slides.pdf" target="_blank">Slides</a>]<br/>
 <b>Wenxue Li</b>, Chaoliang Zeng, Jinbin Hu, Kai Chen<br/>
 APNet 2023<br/>
 </p></li>
