--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="pub.html">Publications</a></div>
 <div class="menu-item"><a href="service.html">Academic Services</a></div>
-<div class="menu-item"><a href="cv.pdf">CV</a></div>
+<div class="menu-item"><a href="CV.pdf">CV</a></div>
 </td>
 
 <td id="layout-content">
@@ -61,7 +61,7 @@ Hong Kong SAR, China
 <h2>About Me</h2>
 
 <p>
-  Hi, I am a 4th-year Ph.D. candidate in <a href="https://cse.hkust.edu.hk/" target="_blank">Department of Computer Science and Engineering</a>, <a href="https://hkust.edu.hk/" target="_blank">Hong Kong University of Science and Technology</a>, advised by <a href="https://www.cse.ust.hk/~kaichen/" target="_blank">Prof. Kai Chen</a>. Before that, I received my B.E. degree in Electronic Science and Technology from <a href="https://www.zju.edu.cn/english/" target="_blank">Zhejiang University</a> in 2021. My research interests include datacenter networking, in-network acceleration, and machine learning systems. If you are interested in my works, feel free to drop me an email.
+  Hi, I am a 4th-year Ph.D. candidate in <a href="https://cse.hkust.edu.hk/" target="_blank">Department of Computer Science and Engineering</a>, <a href="https://hkust.edu.hk/" target="_blank">Hong Kong University of Science and Technology</a>, advised by <a href="https://www.cse.ust.hk/~kaichen/" target="_blank">Prof. Kai Chen</a>. Before that, I received my B.E. degree in Electronic Science and Technology from <a href="https://www.zju.edu.cn/english/" target="_blank">Zhejiang University</a> in 2021. I am broadly interested in datacenter networking and distributed systems, with particular focuses on network protocols, high-speed networking, and networked system for AI. If you are interested in my works, feel free to drop me an email.
 <p>
 
   <h2>News</h2>
