--- a/pub.html
+++ b/pub.html
@@ -20,7 +20,7 @@
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="pub.html" class="current">Publications</a></div>
 <div class="menu-item"><a href="service.html">Academic Services</a></div>
-<div class="menu-item"><a href="cv.pdf">CV</a></div>
+<div class="menu-item"><a href="CV.pdf">CV</a></div>
 </td>
 
 <td id="layout-content">
