--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@ Hong Kong SAR, China
 
   <h2>Experiences</h2>
   <ul>
-    <li><p>Research Intern @ Huawei Hong Kong Research Center, Hong Kong SAR, China (June 2024 - Present) </p></li>
+    <!-- <li><p>Research Intern @ Huawei Hong Kong Research Center, Hong Kong SAR, China (June 2024 - Present) </p></li> -->
     <li><p>Software Engineer Intern @ ByteDance, Hangzhou, China (July 2020 - June 2021) </p></li>
   </ul>
 
   <h2>Honors</h2>
   <ul>
     <li><p>HPCA 2024 Travel Grants (2024) </p></li>
-    <li><p>HKUST Research Travel Grants (2023 Fall, 2024 Winter, 2024 Fall) </p></li>
+    <li><p>HKUST Research Travel Grants (2023 Fall, 2024 Spring, 2024 Summer) </p></li>
     <li><p>HKUST Postgraduate Studentship (2021-2025)</p></li>
     <li><p>First-class Scholarship, ZJU (2019)</p></li>
     <li><p>Zhejiang Daily - Alibaba New Media Scholarship, ZJU (2019)</p></li>
