--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="menu-category">Welcome</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="pub.html">Publications</a></div>
-<div class="menu-item"><a href="service.html">Academic Services</a></div>
+<div class="menu-item"><a href="service.html">Professional Services</a></div>
 <div class="menu-item"><a href="CV.pdf">CV</a></div>
 </td>
 
@@ -66,26 +66,29 @@ Hong Kong SAR, China
 
   <h2>News</h2>
   <ul id="news-list">
-    <li><p>Apr. 2025&nbsp;&nbsp; DCP and CEIO are accepted to SIGCOMM 2025.</p></li>
-    <li><p>Apr. 2025&nbsp;&nbsp; FLB is accepted to ATC 2025.</p></li>
-    <li><p>Apr. 2025&nbsp;&nbsp; Themis and MCC are accepted to APNet 2025.</p></li>
-    <li><p>Mar. 2025&nbsp;&nbsp; FuseLink is accepted to OSDI 2025.</p></li>
-    <li><p>May 2024&nbsp;&nbsp; FlowSail is accepted to IEEE/ACM Transactions on Networking.</p></li>
-    <li><p>Apr. 2024&nbsp;&nbsp; Understanding AI workloads is accepted to APNet 2024.</p></li>
-    <li><p>Oct. 2023&nbsp;&nbsp; Cepheus is accepted to HPCA 2024.</p></li>
-    <li><p>July 2023&nbsp;&nbsp; FlowSail is accepted to ICNP 2023.</p></li>
-    <li><p>July 2022&nbsp;&nbsp; SRNIC is accepted to NSDI 2023.</p></li>
+    <li><p>Aug. 2025&nbsp;&nbsp; Cepheus accepted to IEEE/ACM Transactions on Networking.</p></li>
+    <li><p>Apr. 2025&nbsp;&nbsp; DCP, CEIO and MixNet accepted to SIGCOMM 2025.</p></li>
+    <li><p>Apr. 2025&nbsp;&nbsp; FLB accepted to ATC 2025.</p></li>
+    <li><p>Apr. 2025&nbsp;&nbsp; Themis and MCC accepted to APNet 2025.</p></li>
+    <li><p>Mar. 2025&nbsp;&nbsp; FuseLink accepted to OSDI 2025.</p></li>
+    <li><p>May 2024&nbsp;&nbsp; FlowSail accepted to IEEE/ACM Transactions on Networking.</p></li>
+    <li><p>Apr. 2024&nbsp;&nbsp; Understanding AI workloads accepted to APNet 2024.</p></li>
+    <li><p>Oct. 2023&nbsp;&nbsp; Cepheus accepted to HPCA 2024.</p></li>
+    <li><p>July 2023&nbsp;&nbsp; FlowSail accepted to ICNP 2023.</p></li>
+    <li><p>July 2022&nbsp;&nbsp; SRNIC accepted to NSDI 2023.</p></li>
   </ul>
   <a href="#" id="toggle-news" onclick="toggleNews()">More</a>
 
   <h2>Experiences</h2>
   <ul>
-    <!-- <li><p>Research Intern @ Huawei Hong Kong Research Center, Hong Kong SAR, China (June 2024 - Present) </p></li> -->
+    <li><p>Research Intern @ Huawei Hong Kong Research Center, Hong Kong SAR, China (June 2024 - July 2025) </p></li>
     <li><p>Software Engineer Intern @ ByteDance, Hangzhou, China (July 2020 - June 2021) </p></li>
   </ul>
 
   <h2>Honors</h2>
   <ul>
+    <li><p>SIGCOMM 2025 Travel Grants (2025) </p></li>
+    <li><p>ATC 2025 Travel Grants (2025) </p></li>
     <li><p>HPCA 2024 Travel Grants (2024) </p></li>
     <li><p>HKUST Research Travel Grants (2023 Fall, 2024 Spring, 2024 Summer) </p></li>
     <li><p>HKUST Postgraduate Studentship (2021-2025)</p></li>
