--- a/service.html
+++ b/service.html
@@ -26,7 +26,7 @@
 <td id="layout-content">
 <div id="toptitle">
 
-<h1>Academic Services</h1>
+<h1>Professional Services</h1>
 </div>
 
 <h2>Journal Reviewer</h2>
