--- a/pub.html
+++ b/pub.html
@@ -19,7 +19,7 @@
 <div class="menu-category">Wenxue Li</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="pub.html" class="current">Publications</a></div>
-<div class="menu-item"><a href="service.html">Academic Services</a></div>
+<div class="menu-item"><a href="service.html">Professional Services</a></div>
 <div class="menu-item"><a href="CV.pdf">CV</a></div>
 </td>
 
@@ -34,22 +34,28 @@
   <ol>
   
   <li><p>
-  <b style="color: #2081be;">Revisiting RDMA Reliability for Lossy Fabrics</b><br/>
+  <b style="color: #2081be;">MixNet: A Runtime Reconﬁgurable Optical-Electrical Fabric for Distributed Mixture-of-Experts Training</b> [<a href="pdf/mixnet-sigcomm25.pdf" target="_blank">PDF</a>] <br/>
+  Xudong Liao, Yijun Sun, Han Tian, Xinchen Wan, Yilun Jin, Zilong Wang, Zhenghang Ren, Xinyang Huang, <b>Wenxue Li</b>, Kin Fai Tse, Zhizhen Zhong, Guyue Liu, Ying Zhang, Xiaofeng Ye, Yiming Zhang, Kai Chen<br/>
+  ACM SIGCOMM 2025<br/>
+  </p></li>
+
+  <li><p>
+  <b style="color: #2081be;">Revisiting RDMA Reliability for Lossy Fabrics</b> [<a href="pdf/dcp-sigcomm25.pdf" target="_blank">PDF</a>] <br/>
   <b>Wenxue Li</b>, Xiangzhou Liu, Yunxuan Zhang, Zihao Wang, Wei Gu, Tao Qian, Gaoxiong Zeng, Shoushou Ren, Xinyang Huang, Zhenghang Ren, Bowen Liu, Junxue Zhang, Bingyang Liu, Kai Chen<br/>
   ACM SIGCOMM 2025<br/>
   </p></li>
   <li><p>
-    <b style="color: #2081be;">CEIO: A Cache-Efficient Network I/O Architecture for NIC-CPU Data Paths</b><br/>
+    <b style="color: #2081be;">CEIO: A Cache-Efficient Network I/O Architecture for NIC-CPU Data Paths</b> [<a href="pdf/ceio-sigcomm25.pdf" target="_blank">PDF</a>] <br/>
     Bowen Liu, Xinyang Huang, Qijing Li, Zhuobin Huang, Yijun Sun, <b>Wenxue Li</b>, Junxue Zhang, Ping Yin, Kai Chen<br/>
     ACM SIGCOMM 2025<br/>
   </p></li>
   <li><p>
-    <b style="color: #2081be;">FLB: Fine-grained Load Balancing for Lossless Datacenter Networks</b><br/>
+    <b style="color: #2081be;">FLB: Fine-grained Load Balancing for Lossless Datacenter Networks</b> [<a href="pdf/flb-atc25.pdf" target="_blank">PDF</a>] [<a href="slides/flb-atc25.pdf" target="_blank">Slides</a>] <br/>
     Jinbin Hu*, <b>Wenxue Li*</b>, Xiangzhou Liu,, Junfeng Wang, Bowen Liu, Ping Yin, Jianxin Wang, Jiawei Huang, Kai Chen<br/>
     USENIX ATC 2025<br/>
   </p></li>
   <li><p>
-    <b style="color: #2081be;">Enabling Efficient GPU Communication over Multiple NICs with FuseLink</b><br/>
+    <b style="color: #2081be;">Enabling Efficient GPU Communication over Multiple NICs with FuseLink</b> [<a href="pdf/fuselink-osdi25.pdf" target="_blank">PDF</a>] <br/>
     Zhenghang Ren, Yuxuan Li, Zilong Wang, Xinyang Huang, <b>Wenxue Li</b>, Kaiqiang Xu, Xudong Liao, Yijun Sun, Bowen Liu, Han Tian, Junxue Zhang, Mingfei Wang, Zhizhen Zhong, Guyue Liu, Ying Zhang, Kai Chen<br/>
     USENIX OSDI 2025<br/>
   </p></li>
@@ -75,6 +81,12 @@
 <ol>
 
 <li><p>
+<b style="color: #2081be;">High-Performance RoCE-Capable Multicast for Commodity RDMA Datacenters</b><br/>
+<b>Wenxue Li</b>, Junyi Zhang, Yufei Liu, Gaoxiong Zeng, Zilong Wang, Chaoliang Zeng, Pengpeng Zhou, Qiaoling Wang, Kai Chen<br/>
+IEEE/ACM Transactions on Networking (TON) 2025<br/>
+</p></li>
+
+<li><p>
 <b style="color: #2081be;">FlowSail: Fine-grained and Practical Flow Control for Datacenter Networks</b><br/>
 <b>Wenxue Li</b>, Chaoliang Zeng, Jinbin Hu, Kai Chen<br/>
 IEEE/ACM Transactions on Networking (TON) 2024<br/>
@@ -86,12 +98,12 @@ IEEE/ACM Transactions on Networking (TON) 2024<br/>
 <ol>
 
 <li><p>
-<b style="color: #2081be;">Enabling Packet Spraying over Commodity RNICs with In-Network Support</b><br/>
+<b style="color: #2081be;">Enabling Packet Spraying over Commodity RNICs with In-Network Support</b> [<a href="pdf/themis-apnet25.pdf" target="_blank">PDF</a>] <br/>
 Xiangzhou Liu, <b>Wenxue Li</b>, Kai Chen<br/>
 APNet 2025<br/>
 </p></li>
 <li><p>
-<b style="color: #2081be;">Congestion Control for AI Workloads with Message-Level Signaling</b><br/>
+<b style="color: #2081be;">Congestion Control for AI Workloads with Message-Level Signaling</b> [<a href="pdf/mcc-apnet25.pdf" target="_blank">PDF</a>] <br/>
 Yuxuan Li, Zhenghang Ren, <b>Wenxue Li</b>, Xiangzhou Liu, Kai Chen<br/>
 APNet 2025<br/>
 </p></li>
