--- a/service.html
+++ b/service.html
@@ -19,7 +19,7 @@
 <div class="menu-category">Wenxue Li</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="pub.html">Publications</a></div>
-<div class="menu-item"><a href="service.html" class="current">Academic Services</a></div>
+<div class="menu-item"><a href="service.html" class="current">Professional Services</a></div>
 <div class="menu-item"><a href="CV.pdf">CV</a></div>
 </td>
 
