--- a/index.html
+++ b/index.html
@@ -104,14 +104,12 @@ document.write("Last updated "+new Date(document.lastModified).toUTCString());
 </script>
 &nbsp;&nbsp;&nbsp;&nbsp;
 </div>
-
-<div id="visitor-counter" style="text-align:left; margin-top:20px;">
-  Historical Visitors:
-  <?php include("counter.php"); ?>
-</div>
 </div>
 
 
+<!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=21405789&style=0001&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a> 
 
 <script>
   function toggleNews() {
